--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
         <div class="organizers">
             <p><strong>Organized by:</strong> ESCORT TECH HUB</p>
             <p><strong>Powered by:</strong> Student Innovation Team</p>
-            <p style="margin-top: 20px; color: #666;">&copy; 2025 ESCORT TECH HUB. All rights reserved.</p>
+          
         </div>
     </footer>
 
@@ -1094,8 +1094,9 @@
         });
     </script>
     <footer style="background: #1f2937; color: white; padding: 20px 10px; text-align: center; font-family: 'Segoe UI', sans-serif; font-size: 14px;">
-  <div style="margin-bottom: 5px;">
+  <div style="margin-bottom: 5px;">  <p style="margin-top: 20px; color: #666;">&copy; 2025 ESCORT TECH HUB. All rights reserved.</p><br>
     Developed by <strong>Shaik Lalu Basha</strong> | 📞 <a href="tel:+91 7993417685" style="color: #60a5fa; text-decoration: none;">+91 7993417685</a>
   </div>
 </body>
 </html>
+
